fix jekyll markup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,4 @@
-<title>Alexander Hems - Backend-Entwickler</title>
-<link rel="stylesheet" href="../src/css/main.css" type="text/css">
+<head>
+  <title>Alexander Hems - Backend-Entwickler</title>
+  <link rel="stylesheet" href="../src/css/main.css" type="text/css">
+</head>
