--- a/src/less/tiles.less
+++ b/src/less/tiles.less
@@ -1,7 +1,8 @@
 .project-tile{
   float:left;
-  margin-right: 10px;
+  margin:0 5px;
 }
 .project-tile-container{
-  width:50%;
+  width:59%;
+  margin:auto;
 }
