big commit coming -add Bootstrap -add include splitting body, head, footer -fix styling -add sticky footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,13 @@
 <head>
   <title>Alexander Hems - Backend-Entwickler</title>
+
+  <!-- CSS Linking -->
+  <link rel="stylesheet" href="../src/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="../src/css/bootstrap-theme.min.css" type="text/css">
   <link rel="stylesheet" href="../src/css/main.css" type="text/css">
+
+  <!-- JS Linking -->
+
+  <!-- Meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scaleable=no">
 </head>
