i make it sexy :3

--- a/_includes/mainBody.html
+++ b/_includes/mainBody.html
@@ -1,8 +1,9 @@
 <body>
-	<div class="container">
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
-		<a href="showcase">Go to Showcase</a>
+	{% include header.html %}
+	<div id="main" class="container">
+		<h2>This is my small Github Pages project!</h2>
+		<a href="/showcase">>Here Goes to my Showroom</a>
+		<div class="endContainer"><div>
 	</div>
   {% include footer.html %}
 </body>
