--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,4 +1,5 @@
-@import 'headlines.less';
+@import 'text.less';
 @import 'tiles.less';
 @import 'default.less';
 @import 'footer.less';
+@import 'header.less';
