--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,18 +1,63 @@
 h1 {
-  color: #ff0000;
   font-size: 50px;
+  margin-bottom: -10px;
+  padding-bottom: 0;
+}
+.subheadline {
+  padding-left: 2px;
 }
 .project-tile {
-  float: left;
-  margin: 0 5px;
-}
-.project-tile-container {
-  width: 59%;
   margin: auto;
 }
-body .container {
-  background-color: #FAFAFA;
+.project-tile-container {
+  margin: auto;
 }
-footer .container {
-  background-color: lightgrey;
+@media (max-width: 767px) {
+  .project-tile {
+    width: 90%;
+  }
+  .project-tile img {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+* {
+  color: #ffffff;
+}
+a {
+  color: #ffffff;
+}
+a:hover {
+  color: #375204;
+  text-decoration: none;
+}
+html,
+body {
+  background-color: #2d2626;
+}
+#main {
+  margin-top: 10px;
+  height: 100%;
+  background-color: #8e988c;
+}
+@media (max-width: 767px) {
+  #headLogo {
+    width: 50px;
+  }
+  #header h1 {
+    font-size: 25px;
+    margin-bottom: 2px;
+  }
+}
+#header {
+  margin-top: 10px;
+}
+#header h1 {
+  margin-top: 0;
+}
+#header .headerText {
+  margin-left: 10px;
+}
+#header .breadCrumb {
+  margin-left: 10px;
 }
