--- a/src/less/tiles.less
+++ b/src/less/tiles.less
@@ -1,8 +1,17 @@
 .project-tile{
-  float:left;
-  margin:0 5px;
+  margin:auto;
 }
 .project-tile-container{
-  width:59%;
   margin:auto;
+}
+
+@media (max-width:767px) {
+  .project-tile{
+    width:90%;
+    img{
+        width: 100%;
+        margin-top: 10px;
+    }
+  }
+
 }
