--- a/src/less/tiles.less
+++ b/src/less/tiles.less
@@ -1,8 +1,8 @@
 .project-tile{
-  margin:auto;
+
 }
 .project-tile-container{
-  margin:auto;
+  margin-bottom: 10px;
 }
 
 @media (max-width:767px) {
