--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,9 @@
   <title>Alexander Hems - Backend-Entwickler</title>
 
   <!-- CSS Linking -->
-  <link rel="stylesheet" href="../src/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="../src/css/bootstrap-theme.min.css" type="text/css">
-  <link rel="stylesheet" href="../src/css/main.css" type="text/css">
+  <link rel="stylesheet" href="/src/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="/src/css/bootstrap-theme.min.css" type="text/css">
+  <link rel="stylesheet" href="/src/css/main.css" type="text/css">
 
   <!-- JS Linking -->
 
