--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,9 +13,14 @@
     </div>
   </div>
   <div class="container breadCrumb">
-    <a href="/"><span class="glyphicon glyphicon-triangle-right"></span> Home</a>
+    <a href="/"><span class="glyphicon glyphicon-triangle-right"></span> Home </a>
     {% if page.file == "showRoom" %}
-    <a href="/showcase"><span class="glyphicon glyphicon-triangle-right"></span> Showroom</a>
+    <a href="/showcase"><span class="glyphicon glyphicon-triangle-right"></span> Showroom </a>
+    {% endif %}
+    {% if page.file == "project1" %}
+    <a href="/showcase"><span class="glyphicon glyphicon-triangle-right"></span> Showroom </a><a href="/showcase/project-1"><span class="glyphicon glyphicon-triangle-right"></span> {{page.title}} </a>
+    {% elsif page.file == "project2" %}
+    <a href="/showcase"><span class="glyphicon glyphicon-triangle-right"></span> Showroom </a><a href="/showcase/project-2"><span class="glyphicon glyphicon-triangle-right"></span> {{page.title}} </a>
     {% endif %}
   </div>
 </div>
