add traitor script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/src/css/main.css" type="text/css">
 
   <!-- JS Linking -->
-
+  <script src="/src/js/traitor.js"/>
   <!-- Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scaleable=no">
 </head>
