--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="container breadCrumb">
-    <a href="/"><span class="glyphicon glyphicon-triangle-right"></span> Home </a>
+    <a href="/"><span class="glyphicon glyphicon-triangle-right"></span><span> Home </span></a>
     {% if page.file == "showRoom" %}
     <a href="/showcase"><span class="glyphicon glyphicon-triangle-right"></span> Showroom </a>
     {% endif %}
