--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,57 +1,1 @@
-h1 {
-  font-size: 50px;
-}
-.subheadline {
-  padding-left: 2px;
-}
-.project-tile-container {
-  margin-bottom: 10px;
-  padding-top: 10px;
-}
-@media (max-width: 767px) {
-  .project-tile img {
-    width: 100%;
-    margin-top: 10px;
-  }
-}
-* {
-  color: #ffffff;
-}
-a {
-  color: #ffffff;
-}
-a:hover {
-  color: #375204;
-  text-decoration: none;
-}
-html,
-body {
-  background-color: #2d2626;
-}
-#main {
-  margin-top: 10px;
-  height: 100%;
-  background-color: #8e988c;
-}
-#header {
-  margin-top: 10px;
-}
-#header h1 {
-  margin-top: 0;
-  margin-bottom: -10px;
-}
-#header .headerText {
-  margin-left: 10px;
-}
-#header .breadCrumb {
-  margin-left: 10px;
-}
-@media (max-width: 767px) {
-  #headLogo {
-    width: 50px;
-  }
-  #header h1 {
-    font-size: 25px;
-    margin-bottom: 2px;
-  }
-}
+h1{font-size:50px}.subheadline{padding-left:2px}.project-tile-container{margin-bottom:10px;padding-top:10px}@media (max-width:767px){.project-tile img{width:100%;margin-top:10px}}*,a{color:#fff}a:hover{color:#375204;text-decoration:none}body,html{background-color:#262626}#main{margin-top:10px;height:100%;min-height:300px;border-radius:4px;background-color:#00804d}#header{margin-top:10px}#header h1{margin-top:0;margin-bottom:-10px}#header .headerText{margin-left:10px}#header .breadCrumb{margin-left:10px;margin-top:10px}@media (max-width:767px){#headLogo{width:50px}#header h1{font-size:25px;margin-bottom:2px}}
