--- a/src/less/default.less
+++ b/src/less/default.less
@@ -16,7 +16,7 @@ a{
 }
 
 html, body{
-  background-color: #2d2626;
+  background-color: #262626;
 }
 
 .container{
@@ -24,5 +24,7 @@ html, body{
 #main {
   margin-top: 10px;
   height: 100%;
-  background-color: rgb(142, 152, 140);
+  min-height: 300px;
+  border-radius: 4px;
+  background-color: #00804d;
 }
